--- a/src/components/sitesection.cssmodule.scss
+++ b/src/components/sitesection.cssmodule.scss
@@ -6,10 +6,13 @@
   text-align: center;
 
   h2 {
+    font-size: 4em;
     margin: 0;
     padding: 1em;
   }
 }
+
+
 
 .sitesection-angled-bottom {
   height: 100px;
